<resources>
    <string name="app_name">移动查勘定损</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">移动查勘定损</string>
    <string name="title_acticity_login">用户登录</string>
    <string name="slogan">服务公众   众诚天下</string>
    <string name="company">众诚汽车保险股份有限公司</string>
    <string name="back"/>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="remember_me">记住我的用户名</string>
    <string name="sign_in_txt">签到</string>
    <string name="primary_survey">我是主查勘员</string>
    <string name="dispatch">接收查勘任务</string>
    <string name="loss">接收定损任务</string>
    <string name="agent_driving">接收代驾任务</string>
    <string name="login">登 录</string>
    <string name="cancel">取 消</string>
    <string name="system_set">系统设置</string>
    <string name="case_center">案件中心</string>
    <string name="task_center">任务中心</string>
    <string name="exit_system">退出系统</string>
    <string name="convert_user">切换用户</string>
    <string name="suspend_resume">暂停接收任务／恢复接收任务</string>
    <string name="curr_task">您现在有2个待接收任务，5个待处理任务</string>
    <string name="task_summary_title">任务概要：</string>
    <string name="task_list_title">任务列表：</string>
    <string name="case_list_title">案件列表</string>
    <string name="report_no">报案号</string>
    <string name="task_type">任务类型</string>
    <string name="report_people">报案人／联系人</string>
    <string name="phone">联系电话</string>
    <string name="insurance_addr">出险/定损地点</string>
    <string name="insurance_reason">出险原因：</string>
    <string name="insurance_time">出险时间：</string>
    <string name="report_time">报案时间：</string>
    <string name="status">状态</string>
    <string name="option">操作</string>
    <string name="survey_task">查勘任务</string>
    <string name="loss_task">定损任务</string>
    <string name="reflash">刷新</string>
    <string name="complete">已完成</string>
    <string name="no_complete">未完成</string>
    <string name="all_btn">全部</string>
    <string name="return_btn">返回</string>
    <string name="screening_btn">筛选</string>
    <string name="survey_btn">查勘</string>
    <string name="loss_btn">定损</string>
    <string name="retreat_loss">核损退回</string>
    <string name="retreat_count_loss">核算退回</string>
    <string name="private_survey">司内查勘</string>
    <string name="simple_loss">简易定损</string>
    <string name="re_designated">改派</string>
    <string name="withdrawal_report">撤案</string>
    <string name="look_btn">查看</string>
    <string name="to_file_btn">归档</string>
    <string name="complete_btn">完成</string>
    <string name="confirmdamage_info">核损详情</string>
    <string name="claims_assessment_info">核赔详情</string>
    <string name="survey_treatment">查勘详情</string>
    <string name="basic_info">基本信息</string>
    <string name="vehicle_involved">涉案车辆</string>
    <string name="property_damage">财产损失</string>
    <string name="person_injured">人伤信息</string>
    <string name="survey_propagation">查勘扩展</string>
    <string name="survey_liablitydio">责任比例</string>
    <string name="insurance_policy">保单信息</string>
    <string name="images_data">影像资料</string>
    <string name="images_center">影像中心</string>
    <string name="whether_subrogation">是否代位求偿：</string>
    <string name="claim_form">索赔申请书：</string>
    <string name="accident_handle_type">事故处理类型：</string>
    <string name="case_nature">案件性质：</string>
    <string name="claim_case_category">赔案类别：</string>
    <string name="loss_type">损失类别：</string>
    <string name="accident_cause">出险原因：</string>
    <string name="accident_type">事故类型：</string>
    <string name="survey_type">查勘类型：</string>
    <string name="survey_addr">查勘地点：</string>
    <string name="survey_time">查勘时间：</string>
    <string name="contact_person">联系人：</string>
    <string name="contact_phone">联系电话：</string>
    <string name="touch_for">互碰自赔：</string>
    <string name="survey_of_1">查勘员1：</string>
    <string name="survey_of_2">查勘员2：</string>
    <string name="first_site_survey">第一现场查勘：</string>
    <string name="danger_place">出险地点：</string>
    <string name="accident_processing_department">事故处理部门：</string>
    <string name="mapping_class">查勘类别：</string>
    <string name="quick_office_for">快处快赔：</string>
    <string name="double_free">双免：</string>
    <string name="survey_feedback">查勘意见：</string>
    <string name="report_person">报案人：</string>
    <string name="report_phone">报案电话：</string>
    <string name="report_mobile">报案人手机：</string>
    <string name="vehicle_involved_info">涉案车辆信息</string>
    <string name="license_no_1">车牌号：</string>
    <string name="the_owner_1">车主：</string>
    <string name="number_plate_type_1">号牌种类：</string>
    <string name="engine_number_1">发动机号：</string>
    <string name="frame_number_1">车架号：</string>
    <string name="vehicle_involved_call">提交修改</string>
    <string name="loss_detail">损失明细 </string>
    <string name="the_driver">驾驶员信息 </string>
    <string name="modify">修改</string>
    <string name="vehicle_involved_modify">涉案车辆修改</string>
    <string name="vehicle_involved_prompt">请填写涉案车辆信息：</string>
    <string name="loss_type_1">损失类别：</string>
    <string name="license_no">车牌号：</string>
    <string name="the_owner">车主：</string>
    <string name="number_plate_type">号牌种类：</string>
    <string name="strong_type">交强险责任类型：</string>
    <string name="engine_number">发动机号：</string>
    <string name="frame_number">车架号／VIN：</string>
    <string name="loss_detail_title">损失详情</string>
    <string name="loss_details">定损详情</string>
    <string name="vehicle_involved_loss_detail">涉案车辆损失详情：</string>
    <string name="loss_situation">损失情况</string>
    <string name="estimated_loss_amount">估损金额：</string>
    <string name="salvage_charges">施救费用：</string>
    <string name="survey_sites">查勘地点：</string>
    <string name="travel_a_few_kilometers">已行驶公里数：</string>
    <string name="if_the_refit">是否改装或加装：</string>
    <string name="survey_date">查勘日期：</string>
    <string name="carry_dangerous_goods">是否运载危险品：</string>
    <string name="reservation_for_lossAddr">预约定损地点：</string>
    <string name="liability_ratio">责任比例</string>
    <string name="ratio">商业险赔偿责任比例：</string>
    <string name="loss_area">损失部位(多选)：</string>
    <string name="detele">删除</string>
    <string name="loss_detail_modefy_title">损失详情修改</string>
    <string name="loss_detail_modefy_prompt">请填写损失详情信息：</string>
    <string name="loss_situation_1">损失情况：</string>
    <string name="liability_ratio_1">商业险赔偿责任：</string>
    <string name="the_driver_detail">驾驶员信息：</string>
    <string name="the_driver_detail_name">驾驶员姓名</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="quasi_driving_type">准驾车型</string>
    <string name="age">年龄</string>
    <string name="certificates_type">证件类型</string>
    <string name="certificates_number">证件号码</string>
    <string name="driving_license_number">驾驶证号</string>
    <string name="tel">电话</string>
    <string name="first_license_date">初次领证日期</string>
    <string name="the_driver_modefy_title">驾驶员信息修改</string>
    <string name="the_driver_modefy_prompt">请填写驾驶员信息：</string>
    <string name="the_driver_detail_name_1">驾驶员姓名：</string>
    <string name="tel_1">电话：</string>
    <string name="quasi_driving_type_1">准驾车型：</string>
    <string name="certificates_type_1">证件类型：</string>
    <string name="driving_license_number_1">驾驶证号：</string>
    <string name="property_loss">财产损失情况：</string>
    <string name="losing_party">损失方：</string>
    <string name="contact_person_damage">联系人：</string>
    <string name="contact_mode">联系方式：</string>
    <string name="estimated_loss_amount_damage">估损金额：</string>
    <string name="significant_case">是否重大赔案：</string>
    <string name="survey_date_damage">查勘日期：</string>
    <string name="rescue_process">施救过程：</string>
    <string name="remarks">备注：</string>
    <string name="loss_of_property_list">财产损失清单：</string>
    <string name="loss_property_name">损失财产名称</string>
    <string name="loss_amount">损失金额</string>
    <string name="loss_extent">损失程度</string>
    <string name="loss_type_damage">损失种类</string>
    <string name="copy">复制</string>
    <string name="get_my_position"> 获取我的位置</string>
    <string name="property_damage_modefy_title">财产损失修改</string>
    <string name="fill_information">请填写以下信息</string>
    <string name="casualties">人员伤亡情况：</string>
    <string name="loss_ownership">损失归属方：</string>
    <string name="injured_number">重伤人数：</string>
    <string name="minor_number">轻伤人数：</string>
    <string name="death_number">死亡人数：</string>
    <string name="estimated_loss_amount_injured">估损金额：</string>
    <string name="salvage_charges_injured">施救费用：</string>
    <string name="injuries_info_item">人伤信息清单：</string>
    <string name="injuries_types">伤亡类型</string>
    <string name="whether_to">是否自行就医</string>
    <string name="hospital">就诊医院</string>
    <string name="state_description">伤情描述</string>
    <string name="person_injured_modefy_title">人伤信息修改</string>
    <string name="data_sreach_title">数据查询</string>
    <string name="data_sreach_condition">数据查询条件</string>
    <string name="report_no_1">报案号：</string>
    <string name="task_type_sreach">任务类型：</string>
    <string name="to_time">到：</string>
    <string name="data_sreach_list">数据查询列表</string>
    <string name="data_sreach_result">归档案件数据</string>
    <string name="detail">详细</string>
    <string name="actual_effect">时效</string>
    <string name="processing_stage">处理阶段</string>
    <string name="reception_time">接收时间</string>
    <string name="processing_start_time">处理开始时间</string>
    <string name="processing_end_time">处理结束时间</string>
    <string name="processing_result">处理结果</string>
    <string name="min_time">耗时(分钟)</string>
    <string name="effect_status">状态</string>
    <string name="status_1">状态：</string>
    <string name="actual_effect_title">时效信息</string>
    <string name="actual_effect_item">时效信息清单</string>
    <string name="reception_push_info">接收系统推送信息</string>
    <string name="picture_manager">照片管理</string>
    <string name="pic_loaction_save">照片上传后在本地保存</string>
    <string name="pic_save_to_sdcard_card">照片保存在系统内存，内存剩余 </string>
    <string name="pic_save_to_exc_card">照片保存在扩展内存，内存剩余</string>
    <string name="pic_location_save_day">照片本地保存天数：</string>
    <string name="day">天</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_version">检查新版本</string>
    <string name="case_info_list">案件信息</string>
    <string name="take_picture">任务拍照</string>
    <string name="picture_setting">照片设置</string>
    <string name="picture_back">返回</string>
    <string name="picture_completeing">完成</string>
    <string name="picture_brower_title">照片预览</string>
    <string name="loss_take_photo">1</string>
    <string name="refuse_task_title">拒绝任务</string>
    <string name="refuse_task_prompt">请填写拒绝任务信息：</string>
    <string name="refuse_reason_txt">拒绝原因</string>
    <string name="refuse_call_task">拒绝调度</string>
    <string name="accept_task_title">接收任务</string>
    <string name="accept_task_prompt">请填写接收任务信息：</string>
    <string name="accept_call_task">接收调度</string>
    <string name="need_to_remind">需要提醒</string>
    <string name="place_on_file_task_title">归档任务</string>
    <string name="place_on_file_task_prompt">请填写归档任务信息：</string>
    <string name="place_on_file_call_task">归档申请</string>
    <string name="application_to_send_title">申请改派</string>
    <string name="remark">备注：</string>
    <string name="vehicleTypeListTitle">车辆定型信息</string>
    <string name="modelName">厂商名称</string>
    <string name="tradeName">车型名称</string>
    <string name="carName">车系名称</string>
    <string name="categoryName">种类名称</string>
    <string name="price">价格</string>
    <string name="volume">排量</string>
    <string name="count">数量：</string>
    <string name="insur">险别：</string>
    <string name="lossOfMoreThan">是否损余：</string>
    <string name="salvage">残值：</string>
    <string name="pricePlan">价格方案：</string>
    <string name="localhostPrice">本地价：</string>
</resources>