<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <!-- title layout start -->

    <RelativeLayout
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#555555"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/settingBrackBtn"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:layout_margin="10dip"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sm_loss_retun_back" />

        <TextView
            android:id="@+id/caseCenterTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/system_set"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </RelativeLayout>

    <!-- title layout end -->

    <LinearLayout
        android:id="@+id/check_select_tab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/receptionPushInfoCb"
                style="@style/MCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/reception_push_info"
                android:textColor="#080808"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture_manager"
                android:textColor="#080808"
                android:textSize="20dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp" >

                <CheckBox
                    android:id="@+id/picLoactionSaveCb"
                    style="@style/MCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:checked="true"
                    android:text="@string/pic_loaction_save"
                    android:textColor="#080808" />

                <RadioButton
                    android:id="@+id/picSaveToSdcardCardCb"
                    style="@style/MCheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pic_save_to_sdcard_card"
                    android:textColor="@color/flied_name" 
                    android:visibility="gone"/>

                <RadioButton
                    android:checked="true"
                    android:id="@+id/picSaveToExcCardCb"
                    style="@style/MCheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/pic_save_to_exc_card"
                    android:textColor="#080808" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/pic_location_save_day"
                    android:textColor="#080808"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/imgStorageEdit"
                    style="@style/edit_save_day_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="0" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/day"
                    android:textColor="#080808"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
        <!-- button start -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/clearSystemCashBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:background="@drawable/sm_loss_btn2"
                android:gravity="center"
                android:text="@string/clear_cache"
                android:textColor="#FFFFFF"
                android:textSize="20dip" />

            <Button
                android:id="@+id/checkVersionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:background="@drawable/sm_loss_btn2"
                android:gravity="center"
                android:text="@string/check_version"
                android:textColor="#FFFFFF"
                android:textSize="20dip" />
        </LinearLayout>
        <!-- button end -->

    </LinearLayout>

</LinearLayout>