<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_child_bg"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" 
        style="@style/task_item_title_style"
        android:layout_marginTop="5dp">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="20dp" >

            <TextView
                android:layout_width="110dp"
                android:gravity="right"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:text="@string/localhostPrice" >
            </TextView>

            <TextView
                android:id="@+id/localhostPriceTxt"
                android:layout_width="210dp"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:gravity="left" >
            </TextView>

            <TextView
                android:layout_width="120dp"
                android:gravity="right"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:text="@string/count" >
            </TextView>

            <TextView
                android:id="@+id/countTxt"
                android:layout_width="200dp"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:gravity="left" >
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="20dp" >

            <TextView
                android:layout_width="110dp"
                android:gravity="right"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:text="@string/lossOfMoreThan" >
            </TextView>

            <TextView
                android:id="@+id/lossOfMoreThanTxt"
                android:layout_width="210dp"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:gravity="left" >
            </TextView>

            <TextView
                android:layout_width="110dp"
                android:gravity="right"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:text="@string/pricePlan" >
            </TextView>

            <TextView
                android:id="@+id/pricePlanTxt"
                android:layout_width="210dp"
                style="@style/task_item_title_style"
                android:layout_height="wrap_content"
                android:gravity="left" >
            </TextView>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dp" >

            <TextView
                android:layout_width="110dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/remark" >
            </TextView>

            <TextView
                android:id="@+id/remarkTxt"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:gravity="left" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>